# meshtastic-cli

./: BLEGuid.cpp  BLEGuid.h  CMakeLists.txt  CONTRIBUTING.md  ConsoleEventHandler.cpp  ConsoleEventHandler.h  ConsolePinCodeProvider.cpp  ConsolePinCodeProvider.h  DeviceListView.cpp  DeviceListView.h  HISTORY  MeshtasticBLETransport-win.cpp  MeshtasticBLETransport-win.h  MeshtasticBLETransport.h  MeshtasticClient.cpp  MeshtasticClient.h  MeshtasticDevice.cpp  MeshtasticDevice.h  MeshtasticDeviceBLE-win.cpp  MeshtasticDeviceBLE-win.h  MeshtasticDeviceBLE.h  MeshtasticDeviceContext.cpp  MeshtasticDeviceContext.h  MeshtasticDeviceSerial-win.cpp  MeshtasticDeviceSerial-win.h  MeshtasticDiscoveryEvent.cpp  MeshtasticDiscoveryEvent.h  MeshtasticEnvironment.cpp  MeshtasticEnvironment.h  MeshtasticEnvironmentEvent.cpp  MeshtasticEnvironmentEvent.h  MeshtasticEnvironmentEventHandler.cpp  MeshtasticEnvironmentEventHandler.h  MeshtasticMessage.cpp  MeshtasticMessage.h  MeshtasticOSEnvironment-win.cpp  MeshtasticOSEnvironment-win.h  MeshtasticOSEnvironment.h  MeshtasticSerialTransport-win.cpp  MeshtasticSerialTransport-win.h  (+20 more)
tests/: CMakeLists.txt  CTestTestfile.cmake  test-discover-ble.cpp  test-discover-serial.cpp  test-is-serial-meshtastic.cpp  test-pair-ble.cpp  test-read-ble.cpp  test-read-serial.cpp  test-unpair-ble.cpp  test-wintoast.cpp  test-write-serial.cpp
tools/: generate-code  generate-code.ps1
